force-app/main/default/objects/AI_Transaction_Log__c/AI_Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable audit log capturing every AI-processed quote transaction. Records user prompt, LLM response (sanitised), rules applied, validation results, final quote output, and processing metadata.</description>
    <label>AI Transaction Log</label>
    <nameField>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
        <displayFormat>TXN-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>AI Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>