force-app/main/default/objects/AI_Transaction_Log__c/fields/Batch_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Transaction_Id__c</fullName>
    <description>Unique identifier for bulk quote processing batches. Links related log entries from the same bulk operation.</description>
    <label>Batch Transaction ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>