force-app/main/default/objects/AI_Transaction_Log__c/fields/Cloud_Environment__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Environment__c</fullName>
    <description>Cloud environment active during this transaction (Standard_Salesforce, CPQ_Cloud, Revenue_Cloud).</description>
    <label>Cloud Environment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>