force-app/main/default/objects/AI_Transaction_Log__c/fields/LLM_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>LLM_Response_JSON__c</fullName>
    <description>Sanitised JSON response from the LLM (PII removed). Stored for debugging and audit.</description>
    <label>LLM Response JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>