force-app/main/default/objects/AI_Transaction_Log__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Partial Success</fullName><default>false</default><label>Partial Success</label></value>
            <value><fullName>Validation Failed</fullName><default>false</default><label>Validation Failed</label></value>
            <value><fullName>LLM Error</fullName><default>false</default><label>LLM Error</label></value>
            <value><fullName>Rollback</fullName><default>false</default><label>Rollback</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>