force-app/main/default/objects/AI_Transaction_Log__c/fields/Processing_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Ms__c</fullName>
    <description>Total processing time in milliseconds from prompt receipt to quote creation.</description>
    <label>Processing Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>