force-app/main/default/objects/AI_Transaction_Log__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <description>Salesforce Record ID of the resulting Quote/SBQQ__Quote__c/Order record created.</description>
    <label>Quote ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>