force-app/main/default/objects/AI_Transaction_Log__c/fields/Rules_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rules_Applied__c</fullName>
    <description>JSON array of rule names/IDs applied during this transaction. Used for audit trail and debugging.</description>
    <label>Rules Applied</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>