force-app/main/default/objects/AI_Transaction_Log__c/fields/User_Prompt__c.field-meta.xml
<CustomField>
    <fullName>User_Prompt__c</fullName>
    <description>The original natural language prompt entered by the user. Stored for audit and re-processing purposes.</description>
    <label>User Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>