force-app/main/default/objects/AI_Transaction_Log__c/fields/Validation_Errors__c.field-meta.xml
<CustomField>
    <fullName>Validation_Errors__c</fullName>
    <description>JSON array of validation errors caught by the deterministic guard layer. Empty array means LLM output passed all checks.</description>
    <label>Validation Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>